<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Orto Botanico</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="it">Italiano</string>
    <string name="fr">Francais</string>
    <string name="uk">English</string>
    <string name="mappa">Map</string>
    <string name="title_activity_mappa">Mappa</string>

</resources>
